added start and end date params to wrds download functions

--- a/nbs/wrds_compa.ipynb
+++ b/nbs/wrds_compa.ipynb
@@ -42,189 +42,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading library list...\n",
-      "Done\n"
-     ]
-    }
-   ],
-   "source": [
-    "#| eval: false\n",
-    "db = wrds.Connection(wrds_username=os.getenv('WRDS_USERNAME'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Approximately 879274 rows in comp.funda.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>nullable</th>\n",
-       "      <th>type</th>\n",
-       "      <th>comment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>gvkey</td>\n",
-       "      <td>True</td>\n",
-       "      <td>VARCHAR(6)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>datadate</td>\n",
-       "      <td>True</td>\n",
-       "      <td>DATE</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>fyear</td>\n",
-       "      <td>True</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>indfmt</td>\n",
-       "      <td>True</td>\n",
-       "      <td>VARCHAR(12)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>consol</td>\n",
-       "      <td>True</td>\n",
-       "      <td>VARCHAR(2)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>943</th>\n",
-       "      <td>au</td>\n",
-       "      <td>True</td>\n",
-       "      <td>VARCHAR(8)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>944</th>\n",
-       "      <td>auop</td>\n",
-       "      <td>True</td>\n",
-       "      <td>VARCHAR(8)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>945</th>\n",
-       "      <td>auopic</td>\n",
-       "      <td>True</td>\n",
-       "      <td>VARCHAR(1)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>946</th>\n",
-       "      <td>ceoso</td>\n",
-       "      <td>True</td>\n",
-       "      <td>VARCHAR(1)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>947</th>\n",
-       "      <td>cfoso</td>\n",
-       "      <td>True</td>\n",
-       "      <td>VARCHAR(1)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>948 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         name  nullable              type comment\n",
-       "0       gvkey      True        VARCHAR(6)    None\n",
-       "1    datadate      True              DATE    None\n",
-       "2       fyear      True  DOUBLE_PRECISION    None\n",
-       "3      indfmt      True       VARCHAR(12)    None\n",
-       "4      consol      True        VARCHAR(2)    None\n",
-       "..        ...       ...               ...     ...\n",
-       "943        au      True        VARCHAR(8)    None\n",
-       "944      auop      True        VARCHAR(8)    None\n",
-       "945    auopic      True        VARCHAR(1)    None\n",
-       "946     ceoso      True        VARCHAR(1)    None\n",
-       "947     cfoso      True        VARCHAR(1)    None\n",
-       "\n",
-       "[948 rows x 4 columns]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#| eval: false\n",
-    "db.describe_table('comp','funda')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| eval: false\n",
-    "db.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "def default_raw_vars():\n",
-    "    \"\"\"Takes about 2 min to download all available data on these variables\"\"\"\n",
+    "    \"\"\"Default variables used in `download` if none are specified. Takes about 2 min to download.\"\"\"\n",
+    "\n",
     "    return ['datadate', 'gvkey', 'cusip' ,'cik' ,'tic' ,'fyear' ,'fyr' ,'naicsh', 'sich' ,'exchg',  \n",
     "            'lt' ,'at' ,'txditc' ,'pstkl' ,'pstkrv' ,'pstk' ,'csho' ,'ajex' , 'rdip',\n",
     "            'act' ,'dvc' ,'xad','seq' ,'che' ,'lct' ,'dlc' ,'ib' ,'dvp' ,'txdi' ,'dp' ,\n",
@@ -259,23 +82,26 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`\n",
+    "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; else `permno`, `permco`, and `date` are added by default\n",
     "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
+    "             start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
+    "             end_date: str=None # End date. Default is current date\n",
     "             ) -> pd.DataFrame:\n",
-    "    \"\"\"Downloads `vars` from WRDS comp.funda library and adds PERMNO and PERMCO as in CCM\"\"\"\n",
+    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS comp.funda library and adds PERMNO and PERMCO as in CCM\"\"\"\n",
     "\n",
     "    if vars is None: vars = default_raw_vars()\n",
     "    vars = ','.join(['a.gvkey', 'a.datadate'] + \n",
     "                    [f'a.{x}' for x in vars if x not in ['datadate', 'gvkey']])\n",
     "\n",
     "    sql_string=f\"\"\"SELECT b.lpermno as permno, b.lpermco as permco, b.liid as iid, {vars}\n",
-    "                    FROM comp.funda a\n",
-    "                    INNER JOIN crsp.ccmxpf_lnkhist  b ON a.gvkey = b.gvkey\n",
+    "                    FROM comp.funda AS a\n",
+    "                    INNER JOIN crsp.ccmxpf_lnkhist AS b ON a.gvkey = b.gvkey\n",
     "                    WHERE datadate BETWEEN b.linkdt AND COALESCE(b.linkenddt, CURRENT_DATE)\n",
     "                            AND b.linktype IN ('LU','LC') AND b.linkprim IN ('P','C')\n",
-    "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\"\"\"\n",
-    "    \n",
-    "    return wrds_utils.download(sql_string, wrds_username)"
+    "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\n",
+    "                            AND datadate BETWEEN '{start_date}' AND COALESCE(%(end)s, CURRENT_DATE)\n",
+    "                \"\"\"\n",
+    "    return wrds_utils.download(sql_string, wrds_username=wrds_username, params={'end':end_date})"
    ]
   },
   {
@@ -294,7 +120,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "raw = download()"
+    "raw = download(start_date='01/01/2022')"
    ]
   },
   {
@@ -377,12 +203,16 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def clean(df: pd.DataFrame=None, # If None, downloads `download_vars`\n",
-    "          download_vars: List[str]=None, # If None, downloads `default_raw_vars`\n",
+    "def clean(df: pd.DataFrame=None, # If None, downloads `vars` using `download` function; else, must contain `permno` and `datadate` columns\n",
+    "          vars: List[str]=None, # If None, downloads `default_raw_vars`\n",
+    "          wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
+    "          start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
+    "          end_date: str=None, # End date. Default is current date          \n",
     "          clean_kwargs: dict={}, # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
     "          ) -> pd.DataFrame:\n",
-    "    \n",
-    "    if df is None: df = download(vars=download_vars)\n",
+    "    \"\"\"Applies `pandasmore.setup_panel` to `df`. If `df` is None, downloads `vars` using `download` function.\"\"\"\n",
+    "\n",
+    "    if df is None: df = download(vars=vars, wrds_username=wrds_username, start_date=start_date, end_date=end_date)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='Y', **clean_kwargs)\n",
     "    return df "
    ]
@@ -493,7 +323,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df.head(0) "
+    "df.head(0)"
    ]
   },
   {
