--- a/nbs/wrds_utils.ipynb
+++ b/nbs/wrds_utils.ipynb
@@ -27,12 +27,241 @@
    "source": [
     "#| exports\n",
     "from __future__ import annotations\n",
-    "from typing import List, Dict, Tuple, Callable\n",
+    "from typing import List, Dict, Tuple, Callable, Sequence\n",
     "import os\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import wrds "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examples of useful features of `wrds` library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "db = wrds.Connection(wrds_username=os.getenv('WRDS_USERNAME'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aha_sample', 'ahasamp', 'audit', 'audit_acct_os', 'audit_audit_comp']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.list_libraries()[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['acti', 'asia', 'asib', 'asic', 'asio']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.list_tables(library='crsp')[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximately 879510 rows in comp.funda.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>nullable</th>\n",
+       "      <th>type</th>\n",
+       "      <th>comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gvkey</td>\n",
+       "      <td>True</td>\n",
+       "      <td>VARCHAR(6)</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>datadate</td>\n",
+       "      <td>True</td>\n",
+       "      <td>DATE</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>fyear</td>\n",
+       "      <td>True</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>indfmt</td>\n",
+       "      <td>True</td>\n",
+       "      <td>VARCHAR(12)</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>consol</td>\n",
+       "      <td>True</td>\n",
+       "      <td>VARCHAR(2)</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name  nullable              type comment\n",
+       "0     gvkey      True        VARCHAR(6)    None\n",
+       "1  datadate      True              DATE    None\n",
+       "2     fyear      True  DOUBLE_PRECISION    None\n",
+       "3    indfmt      True       VARCHAR(12)    None\n",
+       "4    consol      True        VARCHAR(2)    None"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.describe_table(library='comp',table='funda').iloc[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>mktrf</th>\n",
+       "      <th>smb</th>\n",
+       "      <th>hml</th>\n",
+       "      <th>rf</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>umd</th>\n",
+       "      <th>dateff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [date, mktrf, smb, hml, rf, year, month, umd, dateff]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.get_table(library='ff', table='factors_monthly').head(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.close()"
    ]
   },
   {
@@ -44,6 +273,7 @@
     "#| export\n",
     "def download(sql_string: str=None,\n",
     "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
+    "             params: Sequence=None # Params cited in the `sql_string`\n",
     "             ) -> pd.DataFrame:\n",
     "    \"\"\"Downloads data from WRDS using the given PostgreSQL `sql_string`\"\"\"\n",
     "\n",
@@ -52,7 +282,7 @@
     "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
     "\n",
     "    dbconn = wrds.Connection(wrds_username = wrds_username)\n",
-    "    try : df = dbconn.raw_sql(sql=sql_string)\n",
+    "    try : df = dbconn.raw_sql(sql=sql_string, params=params)\n",
     "    finally: dbconn.close() \n",
     "    return df"
    ]
