--- a/nbs/wrds_utils.ipynb
+++ b/nbs/wrds_utils.ipynb
@@ -58,6 +58,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "db = wrds.Connection(wrds_username=os.getenv('WRDS_USERNAME'))"
    ]
   },
@@ -78,6 +79,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "db.list_libraries()[:5]"
    ]
   },
@@ -98,6 +100,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "db.list_tables(library='crsp')[:5]"
    ]
   },
@@ -195,6 +198,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "db.describe_table(library='comp',table='funda').iloc[:5]"
    ]
   },
@@ -229,21 +233,60 @@
        "      <th>smb</th>\n",
        "      <th>hml</th>\n",
        "      <th>rf</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>umd</th>\n",
-       "      <th>dateff</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1926-07-01</td>\n",
+       "      <td>0.0296</td>\n",
+       "      <td>-0.0256</td>\n",
+       "      <td>-0.0243</td>\n",
+       "      <td>0.0022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1926-08-01</td>\n",
+       "      <td>0.0264</td>\n",
+       "      <td>-0.0117</td>\n",
+       "      <td>0.0382</td>\n",
+       "      <td>0.0025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1926-09-01</td>\n",
+       "      <td>0.0036</td>\n",
+       "      <td>-0.0140</td>\n",
+       "      <td>0.0013</td>\n",
+       "      <td>0.0023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1926-10-01</td>\n",
+       "      <td>-0.0324</td>\n",
+       "      <td>-0.0009</td>\n",
+       "      <td>0.0070</td>\n",
+       "      <td>0.0032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1926-11-01</td>\n",
+       "      <td>0.0253</td>\n",
+       "      <td>-0.0010</td>\n",
+       "      <td>-0.0051</td>\n",
+       "      <td>0.0031</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [date, mktrf, smb, hml, rf, year, month, umd, dateff]\n",
-       "Index: []"
+       "         date   mktrf     smb     hml      rf\n",
+       "0  1926-07-01  0.0296 -0.0256 -0.0243  0.0022\n",
+       "1  1926-08-01  0.0264 -0.0117  0.0382  0.0025\n",
+       "2  1926-09-01  0.0036 -0.0140  0.0013  0.0023\n",
+       "3  1926-10-01 -0.0324 -0.0009  0.0070  0.0032\n",
+       "4  1926-11-01  0.0253 -0.0010 -0.0051  0.0031"
       ]
      },
      "execution_count": null,
@@ -252,7 +295,11 @@
     }
    ],
    "source": [
-    "db.get_table(library='ff', table='factors_monthly').head(0)"
+    "#| eval: false\n",
+    "db.get_table(library='ff', \n",
+    "             table='factors_monthly',\n",
+    "             columns=['date','mktrf','smb','hml','rf'],\n",
+    "             obs=5)"
    ]
   },
   {
@@ -261,6 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| eval: false\n",
     "db.close()"
    ]
   },
