--- a/nbs/wrds_crspm.ipynb
+++ b/nbs/wrds_crspm.ipynb
@@ -76,19 +76,20 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; else `permno`, `permco`, and `date` are added by default\n",
+    "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; else `permno`, `permco`, `date`, and 'exchcd' are added by default\n",
     "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "             start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None # End date. Default is current date             \n",
     "             ) -> pd.DataFrame:\n",
-    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS crsp.msf and crsp.msenames libraries\"\"\"\n",
+    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS crsp.msf and crsp.msenames libraries. \n",
+    "        Creates `ret_adj` for delisting based on Shumway and Warther (1999) and Johnson and Zhao (2007)\"\"\"\n",
     "\n",
     "    if wrds_username is None:\n",
     "        wrds_username = os.getenv('WRDS_USERNAME')\n",
     "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
     "\n",
     "    if vars is None: vars = default_raw_vars()\n",
-    "    vars = ['permno','permco','date'] + [x for x in vars if x not in ['permno','permco','date']]\n",
+    "    vars = ['permno','permco','date','exchcd'] + [x for x in vars if x not in ['permno','permco','date','exchcd']]\n",
     "\n",
     "    # Figure out which `vars` come from the `msf` table and which come from the `msenames` table and add a. and b. prefixes\n",
     "    db = wrds.Connection(wrds_username = wrds_username)\n",
@@ -102,13 +103,28 @@
     "        raise RuntimeError(\"Something went wrong with a WRDS database connection\")\n",
     "    finally: db.close()\n",
     "\n",
-    "    sql_string = f\"\"\"SELECT {varlist_string} \n",
+    "    sql_string = f\"\"\"SELECT {varlist_string},  c.dlstcd, c.dlret \n",
     "                        FROM crsp.msf AS a \n",
     "                        LEFT JOIN crsp.msenames AS b\n",
     "                            ON a.permno=b.permno AND b.namedt<=a.date AND a.date<=b.nameendt\n",
+    "                        LEFT JOIN crsp.msedelist as c\n",
+    "                            ON a.permno=c.permno AND date_trunc('month', a.date) = date_trunc('month', c.dlstdt)                        \n",
     "                            WHERE a.date BETWEEN '{start_date}' AND COALESCE(%(end)s, CURRENT_DATE) \n",
     "                \"\"\"\n",
-    "    return wrds_utils.download(sql_string, wrds_username=wrds_username, params={'end':end_date})"
+    "    \n",
+    "    df = wrds_utils.download(sql_string, wrds_username=wrds_username, params={'end':end_date})\n",
+    "\n",
+    "    #Adjust for delisting returns using Shumway and Warther (1999) and Johnson and Zhao (2007)\n",
+    "    df['npdelist'] = (df['dlstcd']==500) | df['dlstcd'].between(520,584)\n",
+    "    df['dlret'] = np.where(df.dlret.isna() & df.npdelist & df.exchcd.isin([1,2]), -0.35, df.dlret)\n",
+    "    df['dlret'] = np.where(df.dlret.isna() & df.npdelist & df.exchcd.isin([3]), -0.55, df.dlret)\n",
+    "    df['dlret'] = np.where(df.dlret.notna() & df.dlret < -1, -1, df.dlret)\n",
+    "    df['dlret'] = df.dlret.fillna(0)\n",
+    "\n",
+    "    df['ret_adj'] = (1 + df.ret) * (1 + df.dlret) - 1\n",
+    "    df['ret_adj'] = np.where(df.ret_adj.isna() & (df.dlret!=0), df.dlret, df.ret_adj)\n",
+    "\n",
+    "    return df "
    ]
   },
   {
@@ -131,7 +147,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "raw = download(start_date='01/01/2022')"
+    "raw = download(start_date='01/01/2021')"
    ]
   },
   {
@@ -168,11 +184,15 @@
        "      <th>shrout</th>\n",
        "      <th>prc</th>\n",
        "      <th>cusip</th>\n",
-       "      <th>shrcd</th>\n",
        "      <th>exchcd</th>\n",
+       "      <th>shrcd</th>\n",
        "      <th>siccd</th>\n",
        "      <th>ticker</th>\n",
        "      <th>ncusip</th>\n",
+       "      <th>dlstcd</th>\n",
+       "      <th>dlret</th>\n",
+       "      <th>npdelist</th>\n",
+       "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -180,211 +200,127 @@
        "      <th>0</th>\n",
        "      <td>10026.0</td>\n",
        "      <td>7976.0</td>\n",
-       "      <td>2022-01-31</td>\n",
-       "      <td>-0.039694</td>\n",
-       "      <td>-0.039694</td>\n",
-       "      <td>19110.0</td>\n",
-       "      <td>151.690002</td>\n",
+       "      <td>2021-01-29</td>\n",
+       "      <td>-0.017442</td>\n",
+       "      <td>-0.017442</td>\n",
+       "      <td>18980.0</td>\n",
+       "      <td>152.660004</td>\n",
        "      <td>46603210</td>\n",
-       "      <td>11.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>2052.0</td>\n",
        "      <td>JJSF</td>\n",
        "      <td>46603210</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.017442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10028.0</td>\n",
        "      <td>7978.0</td>\n",
-       "      <td>2022-01-31</td>\n",
-       "      <td>-0.024570</td>\n",
-       "      <td>-0.024570</td>\n",
+       "      <td>2021-01-29</td>\n",
+       "      <td>0.203846</td>\n",
+       "      <td>0.203846</td>\n",
        "      <td>26925.0</td>\n",
-       "      <td>3.970000</td>\n",
+       "      <td>6.260000</td>\n",
        "      <td>29402E10</td>\n",
-       "      <td>11.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>5094.0</td>\n",
        "      <td>ELA</td>\n",
        "      <td>29402E10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.203846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10032.0</td>\n",
        "      <td>7980.0</td>\n",
-       "      <td>2022-01-31</td>\n",
-       "      <td>-0.191574</td>\n",
-       "      <td>-0.191574</td>\n",
-       "      <td>27997.0</td>\n",
-       "      <td>77.519997</td>\n",
+       "      <td>2021-01-29</td>\n",
+       "      <td>-0.016494</td>\n",
+       "      <td>-0.016494</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>76.919998</td>\n",
        "      <td>72913210</td>\n",
-       "      <td>11.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>3670.0</td>\n",
        "      <td>PLXS</td>\n",
        "      <td>72913210</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.016494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10044.0</td>\n",
        "      <td>7992.0</td>\n",
-       "      <td>2022-01-31</td>\n",
-       "      <td>0.007898</td>\n",
-       "      <td>0.007898</td>\n",
-       "      <td>6180.0</td>\n",
-       "      <td>7.912000</td>\n",
+       "      <td>2021-01-29</td>\n",
+       "      <td>0.071605</td>\n",
+       "      <td>0.071605</td>\n",
+       "      <td>6074.0</td>\n",
+       "      <td>4.340000</td>\n",
        "      <td>77467X10</td>\n",
-       "      <td>11.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>2060.0</td>\n",
        "      <td>RMCF</td>\n",
        "      <td>77467X10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.071605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>10051.0</td>\n",
        "      <td>7999.0</td>\n",
-       "      <td>2022-01-31</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>38709.0</td>\n",
-       "      <td>18.129999</td>\n",
+       "      <td>2021-01-29</td>\n",
+       "      <td>-0.068213</td>\n",
+       "      <td>-0.068213</td>\n",
+       "      <td>38109.0</td>\n",
+       "      <td>20.490000</td>\n",
        "      <td>41043F20</td>\n",
-       "      <td>11.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>4813.0</td>\n",
        "      <td>HNGR</td>\n",
        "      <td>41043F20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115613</th>\n",
-       "      <td>93426.0</td>\n",
-       "      <td>53443.0</td>\n",
-       "      <td>2022-12-30</td>\n",
-       "      <td>-0.047326</td>\n",
-       "      <td>-0.047326</td>\n",
-       "      <td>12551.0</td>\n",
-       "      <td>38.650002</td>\n",
-       "      <td>92835K10</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3676.0</td>\n",
-       "      <td>VPG</td>\n",
-       "      <td>92835K10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115614</th>\n",
-       "      <td>93427.0</td>\n",
-       "      <td>53445.0</td>\n",
-       "      <td>2022-12-30</td>\n",
-       "      <td>-0.038903</td>\n",
-       "      <td>-0.038903</td>\n",
-       "      <td>36587.0</td>\n",
-       "      <td>128.220001</td>\n",
-       "      <td>G3323L10</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3827.0</td>\n",
-       "      <td>FN</td>\n",
-       "      <td>G3323L10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115615</th>\n",
-       "      <td>93429.0</td>\n",
-       "      <td>53447.0</td>\n",
-       "      <td>2022-12-30</td>\n",
-       "      <td>-0.010801</td>\n",
-       "      <td>-0.010801</td>\n",
-       "      <td>106082.0</td>\n",
-       "      <td>125.470001</td>\n",
-       "      <td>12503M10</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>6211.0</td>\n",
-       "      <td>CBOE</td>\n",
-       "      <td>12503M10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115616</th>\n",
-       "      <td>93434.0</td>\n",
-       "      <td>53427.0</td>\n",
-       "      <td>2022-12-30</td>\n",
-       "      <td>0.342342</td>\n",
-       "      <td>0.342342</td>\n",
-       "      <td>42623.0</td>\n",
-       "      <td>1.490000</td>\n",
-       "      <td>78513510</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>9999.0</td>\n",
-       "      <td>SANW</td>\n",
-       "      <td>78513510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115617</th>\n",
-       "      <td>93436.0</td>\n",
-       "      <td>53453.0</td>\n",
-       "      <td>2022-12-30</td>\n",
-       "      <td>-0.367334</td>\n",
-       "      <td>-0.367334</td>\n",
-       "      <td>3157752.0</td>\n",
-       "      <td>123.180000</td>\n",
-       "      <td>88160R10</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>9999.0</td>\n",
-       "      <td>TSLA</td>\n",
-       "      <td>88160R10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.068213</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>115618 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         permno   permco        date       ret      retx     shrout  \\\n",
-       "0       10026.0   7976.0  2022-01-31 -0.039694 -0.039694    19110.0   \n",
-       "1       10028.0   7978.0  2022-01-31 -0.024570 -0.024570    26925.0   \n",
-       "2       10032.0   7980.0  2022-01-31 -0.191574 -0.191574    27997.0   \n",
-       "3       10044.0   7992.0  2022-01-31  0.007898  0.007898     6180.0   \n",
-       "4       10051.0   7999.0  2022-01-31  0.000000  0.000000    38709.0   \n",
-       "...         ...      ...         ...       ...       ...        ...   \n",
-       "115613  93426.0  53443.0  2022-12-30 -0.047326 -0.047326    12551.0   \n",
-       "115614  93427.0  53445.0  2022-12-30 -0.038903 -0.038903    36587.0   \n",
-       "115615  93429.0  53447.0  2022-12-30 -0.010801 -0.010801   106082.0   \n",
-       "115616  93434.0  53427.0  2022-12-30  0.342342  0.342342    42623.0   \n",
-       "115617  93436.0  53453.0  2022-12-30 -0.367334 -0.367334  3157752.0   \n",
+       "    permno  permco        date       ret      retx   shrout         prc  \\\n",
+       "0  10026.0  7976.0  2021-01-29 -0.017442 -0.017442  18980.0  152.660004   \n",
+       "1  10028.0  7978.0  2021-01-29  0.203846  0.203846  26925.0    6.260000   \n",
+       "2  10032.0  7980.0  2021-01-29 -0.016494 -0.016494  28766.0   76.919998   \n",
+       "3  10044.0  7992.0  2021-01-29  0.071605  0.071605   6074.0    4.340000   \n",
+       "4  10051.0  7999.0  2021-01-29 -0.068213 -0.068213  38109.0   20.490000   \n",
        "\n",
-       "               prc     cusip  shrcd  exchcd   siccd ticker    ncusip  \n",
-       "0       151.690002  46603210   11.0     3.0  2052.0   JJSF  46603210  \n",
-       "1         3.970000  29402E10   11.0     2.0  5094.0    ELA  29402E10  \n",
-       "2        77.519997  72913210   11.0     3.0  3670.0   PLXS  72913210  \n",
-       "3         7.912000  77467X10   11.0     3.0  2060.0   RMCF  77467X10  \n",
-       "4        18.129999  41043F20   11.0     1.0  4813.0   HNGR  41043F20  \n",
-       "...            ...       ...    ...     ...     ...    ...       ...  \n",
-       "115613   38.650002  92835K10   11.0     1.0  3676.0    VPG  92835K10  \n",
-       "115614  128.220001  G3323L10   12.0     1.0  3827.0     FN  G3323L10  \n",
-       "115615  125.470001  12503M10   11.0     5.0  6211.0   CBOE  12503M10  \n",
-       "115616    1.490000  78513510   11.0     3.0  9999.0   SANW  78513510  \n",
-       "115617  123.180000  88160R10   11.0     3.0  9999.0   TSLA  88160R10  \n",
+       "      cusip  exchcd  shrcd   siccd ticker    ncusip  dlstcd  dlret  npdelist  \\\n",
+       "0  46603210     3.0   11.0  2052.0   JJSF  46603210     NaN    0.0     False   \n",
+       "1  29402E10     2.0   11.0  5094.0    ELA  29402E10     NaN    0.0     False   \n",
+       "2  72913210     3.0   11.0  3670.0   PLXS  72913210     NaN    0.0     False   \n",
+       "3  77467X10     3.0   11.0  2060.0   RMCF  77467X10     NaN    0.0     False   \n",
+       "4  41043F20     1.0   11.0  4813.0   HNGR  41043F20     NaN    0.0     False   \n",
        "\n",
-       "[115618 rows x 13 columns]"
+       "    ret_adj  \n",
+       "0 -0.017442  \n",
+       "1  0.203846  \n",
+       "2 -0.016494  \n",
+       "3  0.071605  \n",
+       "4 -0.068213  "
       ]
      },
      "execution_count": null,
@@ -394,7 +330,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "raw"
+    "raw.head()"
    ]
   },
   {
@@ -596,6 +532,34 @@
     "#| eval: false\n",
     "df.head(0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
