cleaned up intro remarks in documentation

--- a/nbs/fred.ipynb
+++ b/nbs/fred.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# fred\n",
     "\n",
-    "> St. Louis FRED"
+    "> Retrieve and process data from the St. Louis FRED"
    ]
   },
   {
@@ -15,9 +15,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Very thin wrapper on `fredapi2`, which is a fork of [fredapi](https://github.com/mortada/fredapi).\n",
+    "This module is a very thin wrapper on the `fredapi2` module, which itself is a fork of [fredapi](https://github.com/mortada/fredapi)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To use the functions in the `fred` module, you'll need an API key from the St. Louis FRED. \n",
     "\n",
-    "You'll need an API key from FRED. Get one [here](https://fred.stlouisfed.org/docs/api/api_key.html) and store it in your environment variables under the name `FRED_API_KEY` (alternatively, you can supply the API key directly as the `api_key` parameter in each function)."
+    "Get one [here](https://fred.stlouisfed.org/docs/api/api_key.html) and store it in your environment variables under the name `FRED_API_KEY` \n",
+    "\n",
+    "Alternatively, you can supply the API key directly as the `api_key` parameter in each function in the `fred` module."
    ]
   },
   {
