--- a/nbs/wrds_compa.ipynb
+++ b/nbs/wrds_compa.ipynb
@@ -7,7 +7,15 @@
    "source": [
     "# wrds_compa\n",
     "\n",
-    "> WRDS Compustat Annual"
+    "> Retrieve and process data from WRDS Compustat Annual"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since this is a proprietary dataset, in the documentation below, I can not show any of the data that is being retrieved/generated (will show only column names)."
    ]
   },
   {
@@ -85,7 +93,7 @@
     "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; else `permno`, `permco`, and `date` are added by default\n",
     "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "             start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
-    "             end_date: str=None # End date. Default is current date\n",
+    "             end_date: str=None #End date in MM/DD/YYYY format; if None, defaults to current date\n",
     "             ) -> pd.DataFrame:\n",
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS comp.funda library and adds PERMNO and PERMCO as in CCM\"\"\"\n",
     "\n",
