--- a/nbs/wrds_crspm.ipynb
+++ b/nbs/wrds_crspm.ipynb
@@ -7,7 +7,15 @@
    "source": [
     "# wrds_crspm\n",
     "\n",
-    "> WRDS CRSP Monthly Stock File"
+    "> Retrieve and process data from WRDS CRSP Monthly Stock File"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since this is a proprietary dataset, in the documentation below, I can not show any of the data that is being retrieved/generated (will show only column names)."
    ]
   },
   {
@@ -79,7 +87,7 @@
     "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; else `permno`, `permco`, `date`, and 'exchcd' are added by default\n",
     "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "             start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
-    "             end_date: str=None # End date. Default is current date             \n",
+    "             end_date: str=None # End date in MM/DD/YYYY format; if None, defaults to current date             \n",
     "             ) -> pd.DataFrame:\n",
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS crsp.msf and crsp.msenames libraries. \n",
     "        Creates `ret_adj` for delisting based on Shumway and Warther (1999) and Johnson and Zhao (2007)\"\"\"\n",
@@ -399,15 +407,23 @@
        "      <th>shrout</th>\n",
        "      <th>prc</th>\n",
        "      <th>cusip</th>\n",
-       "      <th>shrcd</th>\n",
        "      <th>exchcd</th>\n",
+       "      <th>shrcd</th>\n",
        "      <th>siccd</th>\n",
        "      <th>ticker</th>\n",
        "      <th>ncusip</th>\n",
+       "      <th>dlstcd</th>\n",
+       "      <th>dlret</th>\n",
+       "      <th>npdelist</th>\n",
+       "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -430,7 +446,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, permco, ret, retx, shrout, prc, cusip, shrcd, exchcd, siccd, ticker, ncusip]\n",
+       "Columns: [date, dtdate, permco, ret, retx, shrout, prc, cusip, exchcd, shrcd, siccd, ticker, ncusip, dlstcd, dlret, npdelist, ret_adj]\n",
        "Index: []"
       ]
      },
@@ -498,12 +514,20 @@
        "      <th>dtdate</th>\n",
        "      <th>permco</th>\n",
        "      <th>ret</th>\n",
-       "      <th>shrcd</th>\n",
        "      <th>exchcd</th>\n",
+       "      <th>shrcd</th>\n",
+       "      <th>dlstcd</th>\n",
+       "      <th>dlret</th>\n",
+       "      <th>npdelist</th>\n",
+       "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -519,7 +543,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, permco, ret, shrcd, exchcd]\n",
+       "Columns: [date, dtdate, permco, ret, exchcd, shrcd, dlstcd, dlret, npdelist, ret_adj]\n",
        "Index: []"
       ]
      },
@@ -532,34 +556,6 @@
     "#| eval: false\n",
     "df.head(0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
