--- a/nbs/wrds_utils.ipynb
+++ b/nbs/wrds_utils.ipynb
@@ -313,6 +313,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key functions used throughout the `wrds_` modules in this package"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
