--- a/nbs/wrds_compa.ipynb
+++ b/nbs/wrds_compa.ipynb
@@ -34,16 +34,13 @@
    "outputs": [],
    "source": [
     "#|exports\n",
-    "from __future__ import annotations\n",
-    "from typing import List, Dict, Tuple, Callable\n",
-    "import os\n",
+    "from typing import List\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import wrds \n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets import wrds_utils, wrds_links"
+    "from finsets import wrds_utils"
    ]
   },
   {
