--- a/nbs/wrds_crspm.ipynb
+++ b/nbs/wrds_crspm.ipynb
@@ -34,8 +34,7 @@
    "outputs": [],
    "source": [
     "#|exports\n",
-    "from __future__ import annotations\n",
-    "from typing import List, Dict, Tuple, Callable\n",
+    "from typing import List\n",
     "import os\n",
     "\n",
     "import pandas as pd\n",
@@ -43,7 +42,7 @@
     "import wrds\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets import wrds_utils, wrds_links"
+    "from finsets import wrds_utils"
    ]
   },
   {
