--- a/nbs/wrds_utils.ipynb
+++ b/nbs/wrds_utils.ipynb
@@ -26,12 +26,10 @@
    "outputs": [],
    "source": [
     "#| exports\n",
-    "from __future__ import annotations\n",
-    "from typing import List, Dict, Tuple, Callable, Sequence\n",
+    "from typing import Sequence\n",
     "import os\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import wrds "
    ]
   },
