added data folder with functionality to empty it on push

--- a/nbs/wrds_utils.ipynb
+++ b/nbs/wrds_utils.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "#| exports\n",
     "from typing import Sequence\n",
-    "import os\n",
+    "import os, glob \n",
     "\n",
     "import pandas as pd\n",
     "import wrds "
@@ -339,6 +339,17 @@
     "    try : df = dbconn.raw_sql(sql=sql_string, params=params)\n",
     "    finally: dbconn.close() \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide \n",
+    "for f in glob.glob('../data/*'): os.remove(f)\n",
+    "with open('../data/.gitkeep', 'w') as f: pass "
    ]
   },
   {
