--- a/nbs/wrds_links.ipynb
+++ b/nbs/wrds_links.ipynb
@@ -36,6 +36,7 @@
     "#| exports\n",
     "import pandas as pd\n",
     "\n",
+    "import pandasmore as pdm\n",
     "from finsets import wrds_utils"
    ]
   },
@@ -68,18 +69,22 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def crspm_w_gvkey(wrds_username: str=None) -> pd.DataFrame:\n",
+    "def gvkey_permno_m(wrds_username: str=None) -> pd.DataFrame:\n",
     "    \"\"\"CRSP Monthly ids, with gvkeys\"\"\"\n",
     "\n",
-    "    sql_string=\"\"\"SELECT a.date, a.permno, a.permco, c.gvkey, c.liid as iid\n",
+    "    sql_string=\"\"\"SELECT a.date, a.permno, c.gvkey\n",
     "                  FROM crsp.msf a\n",
     "                  INNER JOIN crsp.msenames b ON a.permno = b.permno\n",
     "                                             AND a.date BETWEEN b.namedt AND b.nameendt \n",
     "                  INNER JOIN crsp.ccmxpf_lnkhist c ON a.permno = c.lpermno \n",
     "                                                   AND c.linktype IN ('LU','LC') AND c.linkprim IN ('P','C')\n",
-    "                                                   AND a.date BETWEEN c.linkdt AND COALESCE(c.linkenddt, CURRENT_DATE)\n",
-    "                \"\"\"\n",
-    "    return wrds_utils.download(sql_string, wrds_username)"
+    "                                                   AND a.date BETWEEN c.linkdt AND COALESCE(c.linkenddt, CURRENT_DATE)\"\"\"\n",
+    "    \n",
+    "    df = wrds_utils.download(sql_string, wrds_username)\n",
+    "    df = pdm.setup_panel(df, panel_ids='permno', time_var='date', freq='M',\n",
+    "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
+    "    df['gvkey'] = df['gvkey'].astype('string')\n",
+    "    return df.reset_index()[['permno','Mdate','gvkey']].copy()  "
    ]
   },
   {
@@ -98,7 +103,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "permno_gvkey = crspm_w_gvkey()"
+    "df = gvkey_permno_m()"
    ]
   },
   {
@@ -127,22 +132,98 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
        "      <th>permno</th>\n",
-       "      <th>permco</th>\n",
+       "      <th>Mdate</th>\n",
        "      <th>gvkey</th>\n",
-       "      <th>iid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>1986-01</td>\n",
+       "      <td>013007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>1986-02</td>\n",
+       "      <td>013007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>1986-03</td>\n",
+       "      <td>013007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>1986-04</td>\n",
+       "      <td>013007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>1986-05</td>\n",
+       "      <td>013007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3930676</th>\n",
+       "      <td>93436</td>\n",
+       "      <td>2022-08</td>\n",
+       "      <td>184996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3930677</th>\n",
+       "      <td>93436</td>\n",
+       "      <td>2022-09</td>\n",
+       "      <td>184996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3930678</th>\n",
+       "      <td>93436</td>\n",
+       "      <td>2022-10</td>\n",
+       "      <td>184996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3930679</th>\n",
+       "      <td>93436</td>\n",
+       "      <td>2022-11</td>\n",
+       "      <td>184996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3930680</th>\n",
+       "      <td>93436</td>\n",
+       "      <td>2022-12</td>\n",
+       "      <td>184996</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3930681 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [date, permno, permco, gvkey, iid]\n",
-       "Index: []"
+       "         permno    Mdate   gvkey\n",
+       "0         10000  1986-01  013007\n",
+       "1         10000  1986-02  013007\n",
+       "2         10000  1986-03  013007\n",
+       "3         10000  1986-04  013007\n",
+       "4         10000  1986-05  013007\n",
+       "...         ...      ...     ...\n",
+       "3930676   93436  2022-08  184996\n",
+       "3930677   93436  2022-09  184996\n",
+       "3930678   93436  2022-10  184996\n",
+       "3930679   93436  2022-11  184996\n",
+       "3930680   93436  2022-12  184996\n",
+       "\n",
+       "[3930681 rows x 3 columns]"
       ]
      },
      "execution_count": null,
@@ -152,7 +233,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "permno_gvkey.head(0)"
+    "df"
    ]
   },
   {
@@ -162,16 +243,21 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def compa_w_permno(wrds_username: str=None) -> pd.DataFrame:\n",
-    "    \"\"\"COMPUSTAT Fundamentals Annual with permno's. As done by CCM.\"\"\"\n",
-    "    sql_string=f\"\"\"SELECT a.datadate, a.gvkey , b.lpermno as permno, b.lpermco as permco, b.liid as iid \n",
+    "def gvkey_permno_a(wrds_username: str=None) -> pd.DataFrame:\n",
+    "    \"\"\"qvkey to permno correspondence at the annual frequency. As done by CCM.\"\"\"\n",
+    "\n",
+    "    sql_string=f\"\"\"SELECT a.datadate, a.gvkey , b.lpermno as permno\n",
     "                    FROM comp.funda a\n",
     "                    INNER JOIN crsp.ccmxpf_lnkhist  b ON a.gvkey = b.gvkey\n",
     "                    WHERE datadate BETWEEN b.linkdt AND COALESCE(b.linkenddt, CURRENT_DATE)\n",
     "                            AND b.linktype IN ('LU','LC') AND b.linkprim IN ('P','C')\n",
     "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\"\"\"\n",
     "    \n",
-    "    return wrds_utils.download(sql_string, wrds_username)"
+    "    df = wrds_utils.download(sql_string, wrds_username)\n",
+    "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='A',\n",
+    "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
+    "    df['gvkey'] = df['gvkey'].astype('string')\n",
+    "    return df.reset_index()[['permno','Adate','gvkey']].copy()  "
    ]
   },
   {
@@ -190,7 +276,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "gvkey_permno = compa_w_permno()"
+    "df = gvkey_permno_a()"
    ]
   },
   {
@@ -219,11 +305,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>datadate</th>\n",
-       "      <th>gvkey</th>\n",
        "      <th>permno</th>\n",
-       "      <th>permco</th>\n",
-       "      <th>iid</th>\n",
+       "      <th>Adate</th>\n",
+       "      <th>gvkey</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -233,7 +317,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, gvkey, permno, permco, iid]\n",
+       "Columns: [permno, Adate, gvkey]\n",
        "Index: []"
       ]
      },
@@ -244,7 +328,102 @@
    ],
    "source": [
     "#| eval: false\n",
-    "gvkey_permno.head(0)"
+    "df.head(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def gvkey_permno_q(wrds_username: str=None) -> pd.DataFrame:\n",
+    "    \"\"\"qvkey to permno correspondence at the quarterly frequency. As done by CCM.\"\"\"\n",
+    "    \n",
+    "    sql_string=f\"\"\"SELECT a.datadate, a.gvkey , b.lpermno as permno\n",
+    "                    FROM comp.fundq a\n",
+    "                    INNER JOIN crsp.ccmxpf_lnkhist  b ON a.gvkey = b.gvkey\n",
+    "                    WHERE datadate BETWEEN b.linkdt AND COALESCE(b.linkenddt, CURRENT_DATE)\n",
+    "                            AND b.linktype IN ('LU','LC') AND b.linkprim IN ('P','C')\n",
+    "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\"\"\"\n",
+    "    \n",
+    "    df = wrds_utils.download(sql_string, wrds_username)\n",
+    "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='Q',\n",
+    "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
+    "    df['gvkey'] = df['gvkey'].astype('string')\n",
+    "    return df.reset_index()[['permno','Qdate','gvkey']].copy()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "df = gvkey_permno_q()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>permno</th>\n",
+       "      <th>Qdate</th>\n",
+       "      <th>gvkey</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [permno, Qdate, gvkey]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "df.head(0)"
    ]
   },
   {
